force-app/main/default/objects/Legal_Contract__c/Legal_Contract__c.object-meta.xml
<CustomObject>
    <description>Used by Sales and Equipment teams for legal contracts that will be integrated with CLM docusign</description>
    <label>Legal Contract</label>
    <nameField>
        <label>Legal Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>