force-app/main/default/objects/Legal_Contract__c/fields/Account_Owner_RVP__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_RVP__c</fullName>
    <formula>Account__r.Owner.name_gsm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner RVP</label>
    <type>Text</type>
</CustomField>