force-app/main/default/objects/Legal_Contract__c/fields/Account_Owner_RVP_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_RVP_Email__c</fullName>
    <formula>Account__r.Owner.GSM_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner RVP Email</label>
    <type>Text</type>
</CustomField>