force-app/main/default/objects/Legal_Contract__c/fields/Account_Owner_SM3a_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_SM3a_Email__c</fullName>
    <formula>Account__r.Owner.ZM_SM_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner SM3a Email</label>
    <type>Text</type>
</CustomField>