force-app/main/default/objects/Legal_Contract__c/fields/Account_Owner_SM3a_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_SM3a_Name__c</fullName>
    <formula>Account__r.Owner.name_zm_sm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner SM3a Name</label>
    <type>Text</type>
</CustomField>