force-app/main/default/objects/Legal_Contract__c/fields/account_type__c.field-meta.xml
<CustomField>
    <fullName>account_type__c</fullName>
    <formula>Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>