force-app/main/default/objects/Legal_Contract__c/fields/Additional_Bill_Tos__c.field-meta.xml
<CustomField>
    <fullName>Additional_Bill_Tos__c</fullName>
    <inlineHelpText>Please enter in format of System Code and Billto.  For ex SW123456</inlineHelpText>
    <label>Additional Bill Tos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>