force-app/main/default/objects/Legal_Contract__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <inlineHelpText>Enter any additional email addresses for customer</inlineHelpText>
    <label>Additional Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>