force-app/main/default/objects/Legal_Contract__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <description>CLM Agreement Number.  Populated by CLM integration to SFDC</description>
    <label>Agreement Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>