force-app/main/default/objects/Legal_Contract__c/fields/CDI_Rationale__c.field-meta.xml
<CustomField>
    <fullName>CDI_Rationale__c</fullName>
    <label>CDI Rationale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Items</fullName>
            </value>
            <value>
                <fullName>Replace Current Items</fullName>
            </value>
            <value>
                <fullName>Reactivate Prior Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>