force-app/main/default/objects/Legal_Contract__c/fields/CLM_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>CLM_Document_ID__c</fullName>
    <description>Used to store the key to CLM for uploading historical data only</description>
    <label>CLM Document ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>