force-app/main/default/objects/Legal_Contract__c/fields/Contract_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Annual_Value__c</fullName>
    <label>Contract Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>