force-app/main/default/objects/Legal_Contract__c/fields/Contract_Source__c.field-meta.xml
<CustomField>
    <fullName>Contract_Source__c</fullName>
    <label>Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veritiv</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>