force-app/main/default/objects/Legal_Contract__c/fields/contract_status__c.field-meta.xml
<CustomField>
    <fullName>contract_status__c</fullName>
    <description>New - status when intake form is completed in Salesforce
With Admin - changed when owner goes from Queue to a User in Salesforce
All other statuses are fed in from CLM</description>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>With Admin</fullName>
            </value>
            <value>
                <fullName>Under Management Review</fullName>
            </value>
            <value>
                <fullName>Under Legal Review</fullName>
            </value>
            <value>
                <fullName>With Customer for Redlining</fullName>
            </value>
            <value>
                <fullName>Final Internal Reviews</fullName>
            </value>
            <value>
                <fullName>Out for Signatures</fullName>
            </value>
            <value>
                <fullName>Fully Executed/Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>