force-app/main/default/objects/Legal_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3-Way Agreement</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Bill and Hold</fullName>
            </value>
            <value>
                <fullName>CDI Agreement</fullName>
            </value>
            <value>
                <fullName>CDI Agreement EXCEPTION</fullName>
            </value>
            <value>
                <fullName>Consignment Agreement</fullName>
            </value>
            <value>
                <fullName>Consumables Agreement</fullName>
            </value>
            <value>
                <fullName>Equipment Proposal</fullName>
            </value>
            <value>
                <fullName>Gov&apos;t Bid AWARD</fullName>
            </value>
            <value>
                <fullName>Master Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance Agreement (EQ)</fullName>
            </value>
            <value>
                <fullName>Print Agreement</fullName>
            </value>
            <value>
                <fullName>Print IFP Customer Certification</fullName>
            </value>
            <value>
                <fullName>Print Letter of Intent</fullName>
            </value>
            <value>
                <fullName>Print Purchase and Sale</fullName>
            </value>
            <value>
                <fullName>Rebate Agreement</fullName>
            </value>
            <value>
                <fullName>Release and Hold Harmless (EQ)</fullName>
            </value>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>