force-app/main/default/objects/Legal_Contract__c/fields/Cost_Savings_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Cost_Savings_Commitments__c</fullName>
    <label>Cost Savings Commitments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>