force-app/main/default/objects/Legal_Contract__c/fields/Created_Date_value__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_value__c</fullName>
    <description>Needed to remove slashes from Create Date for this to work with CLM widget.  This number is part of the eventual name of the contract</description>
    <formula>IF( ISNULL( Historical_Create_Date__c ) ,

(TEXT(MONTH(DATEVALUE(CreatedDate))) + TEXT(DAY(DATEVALUE(CreatedDate) )) + TEXT(YEAR(DATEVALUE(CreatedDate) )) + &quot;_&quot; + TEXT(HOUR(TIMEVALUE(CreatedDate) )) + TEXT(MINUTE(TIMEVALUE(CreatedDate) )) + TEXT(SECOND(TIMEVALUE(CreatedDate)))),

( Agreement_Number__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date value</label>
    <type>Text</type>
</CustomField>