force-app/main/default/objects/Legal_Contract__c/fields/Customer_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Customer_Annual_Spend__c</fullName>
    <label>Customer Annual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>