force-app/main/default/objects/Legal_Contract__c/fields/Customer_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signer_Email__c</fullName>
    <label>Customer Signer Email</label>
    <type>Email</type>
</CustomField>