force-app/main/default/objects/Legal_Contract__c/fields/Customer_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signer_Name__c</fullName>
    <label>Customer Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>