force-app/main/default/objects/Legal_Contract__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>CDI Agreement</fullName>
            </value>
            <value>
                <fullName>CDI Agreement EXCEPTION</fullName>
            </value>
            <value>
                <fullName>Other Document Type</fullName>
            </value>
            <value>
                <fullName>Equipment Proposal</fullName>
                <isActive>false</isActive>
                <label>Equipment Proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>