force-app/main/default/objects/Legal_Contract__c/fields/DW_Key__c.field-meta.xml
<CustomField>
    <fullName>DW_Key__c</fullName>
    <formula>Account__r.Account_DW_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DW Key</label>
    <type>Text</type>
</CustomField>