force-app/main/default/objects/Legal_Contract__c/fields/equip_Base_System_Price__c.field-meta.xml
<CustomField>
    <fullName>equip_Base_System_Price__c</fullName>
    <label>Base System Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>