force-app/main/default/objects/Legal_Contract__c/fields/equip_Consumable_Products__c.field-meta.xml
<CustomField>
    <fullName>equip_Consumable_Products__c</fullName>
    <label>Consumable Products</label>
    <type>TextArea</type>
</CustomField>