force-app/main/default/objects/Legal_Contract__c/fields/Equip_Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equip_Date_Needed__c</fullName>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>