force-app/main/default/objects/Legal_Contract__c/fields/equip_Equipment_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>equip_Equipment_Manufacturer__c</fullName>
    <label>Equipment Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>