force-app/main/default/objects/Legal_Contract__c/fields/equip_Equipment_Specialist__c.field-meta.xml
<CustomField>
    <fullName>equip_Equipment_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>