force-app/main/default/objects/Legal_Contract__c/fields/equip_Equipment_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>equip_Equipment_Specialist_Email__c</fullName>
    <formula>equip_Equipment_Specialist__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Specialist Email</label>
    <type>Text</type>
</CustomField>