force-app/main/default/objects/Legal_Contract__c/fields/equip_Estimated_Freightt__c.field-meta.xml
<CustomField>
    <fullName>equip_Estimated_Freightt__c</fullName>
    <label>Estimated Freight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>