force-app/main/default/objects/Legal_Contract__c/fields/equip_Estimated_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>equip_Estimated_Lead_Time__c</fullName>
    <label>Estimated Lead Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>