force-app/main/default/objects/Legal_Contract__c/fields/equip_Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>equip_Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>