force-app/main/default/objects/Legal_Contract__c/fields/equip_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>equip_Margin_Rate__c</fullName>
    <label>Margin Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>