force-app/main/default/objects/Legal_Contract__c/fields/equip_Model_or_Description__c.field-meta.xml
<CustomField>
    <fullName>equip_Model_or_Description__c</fullName>
    <label>Model or Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>