force-app/main/default/objects/Legal_Contract__c/fields/equip_Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>equip_Project_Overview__c</fullName>
    <label>Project Overview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>