force-app/main/default/objects/Legal_Contract__c/fields/equip_Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>equip_Ship_To_City__c</fullName>
    <label>Ship To City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>