force-app/main/default/objects/Legal_Contract__c/fields/equip_Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>equip_Ship_To_State__c</fullName>
    <label>Ship To State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>