force-app/main/default/objects/Legal_Contract__c/fields/equip_Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>equip_Ship_To_Street__c</fullName>
    <label>Ship To Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>