force-app/main/default/objects/Legal_Contract__c/fields/equip_Ship_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>equip_Ship_To_Zip_Code__c</fullName>
    <label>Ship To Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>