force-app/main/default/objects/Legal_Contract__c/fields/equip_Start_Up_Costt__c.field-meta.xml
<CustomField>
    <fullName>equip_Start_Up_Costt__c</fullName>
    <label>Start Up Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>