force-app/main/default/objects/Legal_Contract__c/fields/equip_Suggested_Options__c.field-meta.xml
<CustomField>
    <fullName>equip_Suggested_Options__c</fullName>
    <label>Suggested Options</label>
    <type>TextArea</type>
</CustomField>