force-app/main/default/objects/Legal_Contract__c/fields/equip_Suggested_Options_long__c.field-meta.xml
<CustomField>
    <fullName>equip_Suggested_Options_long__c</fullName>
    <label>Suggested Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>