force-app/main/default/objects/Legal_Contract__c/fields/equip_System_Requirements__c.field-meta.xml
<CustomField>
    <fullName>equip_System_Requirements__c</fullName>
    <label>System Requirements</label>
    <type>TextArea</type>
</CustomField>