force-app/main/default/objects/Legal_Contract__c/fields/equip_System_Requirements_long__c.field-meta.xml
<CustomField>
    <fullName>equip_System_Requirements_long__c</fullName>
    <label>System Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>