force-app/main/default/objects/Legal_Contract__c/fields/equip_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>equip_Total_Margin__c</fullName>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>