force-app/main/default/objects/Legal_Contract__c/fields/Equipment_Specialist_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Specialist_Mobile__c</fullName>
    <formula>equip_Equipment_Specialist__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is blank, ask the Specialist to add his Mobile Phone number on his user record in Salesforce in the filed &quot;Mobile&quot;.</inlineHelpText>
    <label>Equipment Specialist Mobile</label>
    <type>Text</type>
</CustomField>