force-app/main/default/objects/Legal_Contract__c/fields/Field_Sales_or_NA__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_or_NA__c</fullName>
    <formula>IF
(OR
 (ISPICKVAL(Prospect_Field_or_Parent__c, &quot;Parent National Account&quot;),
(AND
( Account__r.National_Account__c = True,  Account__r.ParentId = NULL)))

,&quot;Parent National Account&quot;, &quot;Field Sales&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Sales or NA</label>
    <type>Text</type>
</CustomField>