force-app/main/default/objects/Legal_Contract__c/fields/File_Signed__c.field-meta.xml
<CustomField>
    <fullName>File_Signed__c</fullName>
    <label>File Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Signatures</fullName>
            </value>
            <value>
                <fullName>Store FULLY SIGNED Agreement</fullName>
            </value>
            <value>
                <fullName>Files Not Signed</fullName>
                <isActive>false</isActive>
                <label>Files Not Signed</label>
            </value>
            <value>
                <fullName>Files Signed</fullName>
                <isActive>false</isActive>
                <label>Files Signed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>