force-app/main/default/objects/Legal_Contract__c/fields/Has_the_Template_been_modified__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Template_been_modified__c</fullName>
    <label>Has the Template been modified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>