force-app/main/default/objects/Legal_Contract__c/fields/Historical_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Historical_Create_Date__c</fullName>
    <description>Store the original create date from CLM here for historical records.  referenced in date formula field</description>
    <label>Historical Create Date</label>
    <type>DateTime</type>
</CustomField>