force-app/main/default/objects/Legal_Contract__c/fields/Is_Program_Managed__c.field-meta.xml
<CustomField>
    <fullName>Is_Program_Managed__c</fullName>
    <label>Is Program Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>