force-app/main/default/objects/Legal_Contract__c/fields/Link_to_Contract__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Contract__c</fullName>
    <description>Link to take user to contract in CLM.  User must have access to CLM for link to work.  Willl be populated by CLM integration</description>
    <label>Link to Contract</label>
    <type>Url</type>
</CustomField>