force-app/main/default/objects/Legal_Contract__c/fields/Local_CDI_Required__c.field-meta.xml
<CustomField>
    <fullName>Local_CDI_Required__c</fullName>
    <label>Local CDI Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>