force-app/main/default/objects/Legal_Contract__c/fields/NDA_Source__c.field-meta.xml
<CustomField>
    <fullName>NDA_Source__c</fullName>
    <label>NDA Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veritiv Provided NDA</fullName>
            </value>
            <value>
                <fullName>Customer Provided NDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>