force-app/main/default/objects/Legal_Contract__c/fields/Other_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Other_Agreements__c</fullName>
    <label>Other Agreements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>