force-app/main/default/objects/Legal_Contract__c/fields/Pricing_Language_Included__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Language_Included__c</fullName>
    <label>Pricing Language Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>