force-app/main/default/objects/Legal_Contract__c/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <label>Product Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>