force-app/main/default/objects/Legal_Contract__c/fields/Product_Table_Modified__c.field-meta.xml
<CustomField>
    <fullName>Product_Table_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the product table on a CDI is modified in CLM, they will send a True value to Salesforce.</description>
    <label>Product Table Modified</label>
    <type>Checkbox</type>
</CustomField>