force-app/main/default/objects/Legal_Contract__c/fields/Program_Manager_Email2__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager_Email2__c</fullName>
    <formula>Program_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Manager Email</label>
    <type>Text</type>
</CustomField>