force-app/main/default/objects/Legal_Contract__c/fields/Prospect_Field_or_Parent__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Field_or_Parent__c</fullName>
    <label>Prospect Field or Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>Parent National Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>