force-app/main/default/objects/Legal_Contract__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>Used by the Equipment team.  Separate record type so we can have separate page layout</description>
    <label>Equipment</label>
</RecordType>