force-app/main/default/objects/Legal_Contract__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <description>Record type used for NDA, CDI, CDI Exception and Other</description>
    <label>Sales</label>
</RecordType>