force-app/main/default/objects/Legal_Contract__c/listViews/Equipment_Proposals_In_Flight.listView-meta.xml
<ListView>
    <fullName>Equipment_Proposals_In_Flight</fullName>
    <columns>NAME</columns>
    <columns>equip_Equipment_Specialist__c</columns>
    <columns>contract_status__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Program_Manager__c</columns>
    <columns>Submitted_By_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Equipment Proposal</value>
    </filters>
    <filters>
        <field>contract_status__c</field>
        <operation>equals</operation>
        <value>New,With Admin,Under Management Review,Under Legal Review,With Customer for Redlining,Final Internal Reviews,Out for Signatures</value>
    </filters>
    <label>In Flight - Equipment</label>
</ListView>