force-app/main/default/objects/Legal_Contract__c/listViews/Flow_Processing_Queue_Legal_Contract.listView-meta.xml
<ListView>
    <fullName>Flow_Processing_Queue_Legal_Contract</fullName>
    <columns>NAME</columns>
    <columns>Submitted_By_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Flow Processing Queue</label>
    <queue>Flow_Processing_Queue</queue>
    <sharedTo>
        <group>All_Admins</group>
    </sharedTo>
</ListView>